--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -2,7 +2,10 @@
 
 @media only screen and (max-width: 450px){
   .card{
-    margin-left: 0 !important;
+    margin-right: 0 !important;
     margin: 30px;
+  }
+  #menu li{
+    margin-left: 20px;
   }
 }
