--- a/views/staff-panel.ejs
+++ b/views/staff-panel.ejs
@@ -15,6 +15,26 @@
     <title>Discord Lists | Staff Panel</title>
   </head>
   <body>
-      <center><h1>Panel Coming Soon</h1></center>
+      <center><h1>Staff Panel</h1></center>
+      <div class="center-flex">
+      <p>Accept/Deny bots here!</p>
+      <%unverifiedBot.forEach%>
+      </div>
+      <div class="center-flex">
+      <% unverifiedBot.forEach(function(bot) { %>
+    <div class="container">
+      <div class="card">
+        <div class="imgBx">
+          <img src="<%= bot.botavatar %>">
+        </div>
+        <div class="contentBx"><br>
+          <h2 style="font-size: 25xpx;"><%= bot.botname %></h2><br><br>
+          <a href="/bot/<%= bot.botid %>" class="viewbot"><button class="button-main">View</button></a>
+          <a href="<%= bot.invite %>" class="invitebot"><button class="button-main">Invite</button></a>
+        </div>
+      </div>
+    </div>
+              <% }); %>
+      </div>
   </body>
 </html>
