--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -1,6 +1,9 @@
 <!doctype html>
 <html lang="en">
  <head>
+ <link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
