--- a/views/staff-panel.ejs
+++ b/views/staff-panel.ejs
@@ -20,21 +20,69 @@
       <p>Accept/Deny bots here!</p>
       <%unverifiedBot.forEach%>
       </div>
-      <div class="center-flex">
-      <% unverifiedBot.forEach(function(bot) { %>
-    <div class="container">
-      <div class="card">
-        <div class="imgBx">
-          <img src="<%= bot.botavatar %>">
-        </div>
-        <div class="contentBx"><br>
-          <h2 style="font-size: 25xpx;"><%= bot.botname %></h2><br><br>
-          <a href="/bot/<%= bot.botid %>" class="viewbot"><button class="button-main">View</button></a>
-          <a href="<%= bot.invite %>" class="invitebot"><button class="button-main">Invite</button></a>
+<div>
+  <%if(unverifiedBot.length === 0){ %>
+      <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+        <symbol id="check-circle-fill" fill="currentColor" viewBox="0 0 16 16">
+          <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+        </symbol>
+        <symbol id="info-fill" fill="currentColor" viewBox="0 0 16 16">
+          <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
+        </symbol>
+        <symbol id="exclamation-triangle-fill" fill="currentColor" viewBox="0 0 16 16">
+          <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+        </symbol>
+      </svg>
+      <div class="alert alert-danger d-flex align-items-center" role="alert">
+        <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill"/></svg>
+        <div>
+          No bots to show. Check back later!
         </div>
       </div>
-    </div>
-              <% }); %>
-      </div>
-  </body>
-</html>
+  <% } %>
+  <% unverifiedBot.forEach(function(bot) { %>
+
+    <% if(bot.state === 'unverified'){ %>
+      <div class="secondary-bg">
+      <img src="<%=bot.botavatar%>" style="display:block;margin:auto;">
+      <br>
+      <p><%=bot.shortdes%></p>
+       <span id="botID" style="display:none !important"><%=bot.botid%></span>
+        <div class="center-flex">
+        <button class="button-main" onclick="window.location.href = '/bot/<%=bot.botid%>'">View</button>
+         <button class="button-main" onclick="acceptBot()" style="background:#1FD78D">Accept</button><Br><Br>
+         <button class="button-main" onclick="denyBot()" style="background: #F62451
+         ">Deny</button> 
+         </div> 
+      </div>       
+    <% }%>
+  <% }); %>
+</div>
+
+            <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+<script>
+const ID= document.getElementById("botID").innerHTML
+function acceptBot(){
+Swal.fire(
+  'Accept Bot and add it to the list?',
+  'Are you sure?',
+  'question'
+).then((result) => {
+  if (result.isConfirmed) {
+  fetch("/staffpanel/accept/" + ID, {
+})
+    Swal.fire('Alright then!', 'Bot Accepted.', 'success')
+  } 
+})
+}
+function denyBot(){
+Swal.fire(
+  'Deny bot and permanently delete?',
+  'Are you sure?',
+  'question'
+)
+}
+</script>
+<div style="height:100vh"></div>
+<%- include('./templates/footer.ejs') %>
