--- a/views/add.ejs
+++ b/views/add.ejs
@@ -40,7 +40,7 @@
         </div><br>
         <div class="col-md-4">
             <label for="validationCustom01" class="form-label">Detailed Description About Your Bot. *</label>
-            <textarea style="white-space:pre;" class="form-control" name="long" id="validationCustom01" placeholder="The old man was bent into a capital C, his head leaning so far forward that his beard nearly touched his knobby knees." minlength="300" required></textarea>
+            <textarea style="white-space:pre-wrap;height:500px;" class="form-control" name="long" id="validationCustom01" placeholder="The old man was bent into a capital C, his head leaning so far forward that his beard nearly touched his knobby knees." minlength="300" required></textarea>
             <div class="invalid-feedback">
               Your description must exceed 300 character limit.
             </div>
