--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <%- include('./templates/header.ejs') %>
  <%- include('./templates/nav.ejs') %> 
 <br><Br>
-<img src="https://cdn.glitch.com/1be813f1-4233-4b7a-bf44-8a562481d51f%2Flogo.png?" class="top-img"/>
+<img src="https://cdn.discordapp.com/attachments/870296629134114817/870305666978439208/Discord_Lists_V6_Logo.png" class="top-img"/>
 <br>
 <h1>Discord Lists</h1>
 <br>
