--- a/views/staff-panel.ejs
+++ b/views/staff-panel.ejs
@@ -36,7 +36,7 @@
       <div class="alert alert-danger d-flex align-items-center" role="alert">
         <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill"/></svg>
         <div>
-          No bots to show. Check back later!
+            Unapproved bots waiting = 0        
         </div>
       </div>
   <% } %>
@@ -86,3 +86,12 @@ Swal.fire(
 </script>
 <div style="height:100vh"></div>
 <%- include('./templates/footer.ejs') %>
+<!---
+<form action="https://a-botlist-without-a-name.crazybotboy.repl.co/maintenance?access_key=pw1234" method="post">
+  <label for="mode">First name:</label>
+  <input type="text" id="mode" name="mode"><br><br>
+ 
+  <input type="submit" value="Submit">
+</form>
+-->
+
