--- a/views/templates/footer.ejs
+++ b/views/templates/footer.ejs
@@ -23,7 +23,7 @@
 
 					<a href="/about">About Us</a>
 
-          <a href="/login">Add your Bot</a>
+          <a href="/addbot">Add your Bot</a>
 				</p>
         <div style="text-align:center" class="marginadd">
         <a href="https://github.com/Discord-Lists/Privacy-Policy">Privacy Policy</a>
