--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -11,7 +11,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
-  <link rel="shortcut icon" href="https://cdn.glitch.com/1be813f1-4233-4b7a-bf44-8a562481d51f%2Flogo.png?v=1621028854108" style="border-radius: 80px;" type="image/x-icon">
+  <link rel="shortcut icon" href="https://cdn.discordapp.com/attachments/870296629134114817/870305666978439208/Discord_Lists_V6_Logo.png" style="border-radius: 80px;" type="image/x-icon">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
