--- a/views/templates/nav.ejs
+++ b/views/templates/nav.ejs
@@ -2,7 +2,7 @@
   <input type='checkbox' id='responsive-menu' onclick='updatemenu()'><label></label>
   <script src="https://kit.fontawesome.com/e52f50d2d7.js" crossorigin="anonymous"></script>
   <ul>
-    <li><a href="/"><img src="https://cdn.glitch.com/1be813f1-4233-4b7a-bf44-8a562481d51f%2Flogo.png?" style="
+    <li><a href="/"><img src="https://cdn.discordapp.com/attachments/870296629134114817/870305666978439208/Discord_Lists_V6_Logo.png" style="
     width: auto;
     height: 60px;
 "></a></li>
@@ -17,6 +17,14 @@
    <% } %>
   </ul>
 </nav>
+
+<!-- Code Warning -->
+<script>
+            console.log("%cStop!!", "font-weight: bold; font-size: 75px;color: red; text-shadow: 3px 3px 0 rgb(217,31,38) , 6px 6px 0 rgb(226,91,14) , 9px 9px 0 rgb(245,221,8) , 12px 12px 0 rgb(5,148,68) , 15px 15px 0 rgb(2,135,206) , 18px 18px 0 rgb(4,77,145) , 21px 21px 0 rgb(42,21,113)"),
+            console.log("%cDo not paste anything here!!", "font-weight: bold; font-family: sans-serif; font-size: 25px;color: red;"),
+            console.log("%cAttackers might be able to access your private and/or account information if you do so!", "font-weight: bold; font-family: sans-serif; font-size: 25px;color: red;")
+
+</script>
 
 <!-- Cookie Popup -->
 <div class="cookie-popup cookie-popup--short cookie-popup--dark">
@@ -63,5 +71,5 @@ function _reset() {
 function _switchMode(cssClass) {
   el('.cookie-popup').classList.toggle(cssClass);
 }
-  </Script
+  </Script>
 <br><Br><br>
