--- a/public/css/main.css
+++ b/public/css/main.css
@@ -625,3 +625,23 @@ a:hover{
 .bot-misc-links{
   font-size: 26px;
 }
+
+.search {
+  width: 200px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+  background-color: white;
+  background-image: url('/images/searchicon.svg');
+  background-position: 6px 11px; 
+  background-size: 30px;
+  background-repeat: no-repeat;
+  padding: 12px 20px 12px 40px;
+  -webkit-transition: width 0.4s ease-in-out;
+  transition: width 0.4s ease-in-out;
+}
+
+.search:focus {
+  width: 70%;
+}
