--- a/views/bot.ejs
+++ b/views/bot.ejs
@@ -33,7 +33,7 @@
       <div class="alert alert-danger d-flex align-items-center" role="alert">
         <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill"/></svg>
         <div>
-          This bot is not verified yet. Be carefull when inviting it
+          This bot is not verified by our reviewers yet. 
         </div>
       </div>
     <% } %>
