--- a/views/search.ejs
+++ b/views/search.ejs
@@ -35,7 +35,7 @@
           <img src="<%= bot.botavatar %>">
         </div>
         <div class="contentBx"><br>
-          <h2 style="font-size: 25xpx;"><%= bot.botname %><img src="https://cdn.glitch.com/1be813f1-4233-4b7a-bf44-8a562481d51f%2FCertified.png?v=1625404757585" title="Certified Bot" width="38" height="38"></h2><br><br>
+          <h2 style="font-size: 25xpx;"><%= bot.botname %></h2><br><br>
           <a href="/bot/<%= bot.botid %>" class="viewbot"><button class="button-main">View</button></a>
           <a href="<%= bot.invite %>" class="invitebot"><button class="button-main">Invite</button></a>
         </div>
