--- a/views/bot.ejs
+++ b/views/bot.ejs
@@ -42,10 +42,10 @@
   <div class="container mx-auto flex px-5 py-24 items-center justify-center flex-col">
     <img alt="hero" src="<%=botid.botavatar%>">
     <div class="text-center lg:w-2/3 w-full">
-      <h1 class="flex justify-center title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900"><%=botid.botname%><% if(botid.certification === 'certified') { %><img src="https://cdn.glitch.com/1be813f1-4233-4b7a-bf44-8a562481d51f%2FCertified.png?v=1625404757585" title="Certified Bot" height="45" width="60"><% } %></h1>
+      <h1 class="flex justify-center title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900" style="color: white !important"><%=botid.botname%><% if(botid.certification === 'certified') { %><img src="https://cdn.glitch.com/1be813f1-4233-4b7a-bf44-8a562481d51f%2FCertified.png?v=1625404757585" title="Certified Bot" height="45" width="60"><% } %></h1>
       <span class="font-bold text-2xl" style="color: var(--main-bg-color);">Prefix : <%=botid.botprefix%></span>
       <br><br>
-      <p class="mb-8 leading-relaxed"><%=deslong%></p>
+      <p class="mb-8 leading-relaxed deslong"><%=deslong%></p>
       <div class="flex justify-center">
         <a><button class="button-main">Vote</button></a>
         <a href="<%=botid.invite%>" class="underline"><button class="button-main" style="background:none !important ;color:var(--main-bg-color);font-weight:bold;">Invite</button></a>
@@ -81,6 +81,14 @@
         </a>
       </div>
     <% } %>
+    </div>
+    <br><br>
+    <div class="tags-display center-flex">
+      <% botid.tags.forEach(tag=>{ %>
+      <a href="/s?search=<%=tag%>"
+      <span class="tag-element"><%=tag%></span>
+      </a>
+      <% })%>
     </div>
       <br><br>
       <p class="fw-bold">Owner: <%= botid.botowner %></p>
