--- a/views/bot.ejs
+++ b/views/bot.ejs
@@ -47,8 +47,8 @@
       <br><br>
       <p class="mb-8 leading-relaxed deslong"><%=deslong%></p>
       <div class="flex justify-center">
-        <a><button class="button-main">Vote</button></a>
-        <a href="<%=botid.invite%>" class="underline"><button class="button-main" style="background:none !important ;color:var(--main-bg-color);font-weight:bold;">Invite</button></a>
+        <a><button class="button-main"><i class="fas fa-poll"></i> Vote </button></a>
+        <a href="<%=botid.invite%>" class="underline"><button class="button-main" style="background:none !important ;color:var(--main-bg-color);font-weight:bold;"><i class="fas fa-arrow-right"></i> Invite </button></a>
 
       </div><br><br>
 
