--- a/views/bugs.ejs
+++ b/views/bugs.ejs
@@ -1,7 +1,7 @@
  <%- include('./templates/header.ejs') %>
  <%- include('./templates/nav.ejs') %> 
 <br><Br><Br><Br>
-<H1> Bug Reports <H1>
+<H1><i class="fas fa-bug"></i> Bug Reports <H1>
 <p style="padding:100px">Found a Vulnerability? Bug? Something unexpected? Report here! Make sure to join our Discord. We will respond as soon as we can. In case of any issues, contact a staff or a mod, they will assist you.</p>
 <br>
 
