--- a/views/templates/footer.ejs
+++ b/views/templates/footer.ejs
@@ -14,14 +14,14 @@
 			<div class="footer-left">
 
 				<p class="footer-links">
-					<a class="link-1" href="#">Home</a>
+					<a class="link-1" href="/">Home</a>
 					<a href="/">Bots</a>
 
 					<a href="/search">Search</a>
 
 					<a href="/invite">Discord</a>
 
-					<a href="/about">About Us</a>
+					<a href="/faq">FAQ</a>
 
           <a href="/addbot">Add your Bot</a>
 				</p>
