--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
 
 <br><br>
 
-    <h2 class="heading">Certified Bots</h2><br><br>
+    <h2 class="heading"><i class="fas fa-check-circle"></i> Certified Bots</h2><br><br>
      <% if(certified_bots.length === 0){ %>
         <h3 class="text-center">No Certified Bots found. Please visit us later.</h3>
       <% } else{ %>
@@ -26,8 +26,8 @@
         </div>
         <div class="contentBx"><br>
           <h2 style="font-size: 25xpx;"><%= bot.botname %><img src="https://cdn.glitch.com/1be813f1-4233-4b7a-bf44-8a562481d51f%2FCertified.png?v=1625404757585" title="Certified Bot" width="38" height="38"></h2><br><br>
-          <a href="/bot/<%= bot.botid %>" class="viewbot"><button class="button-main">View</button></a>
-          <a href="<%= bot.invite %>" class="invitebot"><button class="button-main">Invite</button></a>
+          <a href="/bot/<%= bot.botid %>" class="viewbot"><button class="button-main"><i class="fas fa-eye"></i> View </button></a>
+          <a href="<%= bot.invite %>" class="invitebot"><button class="button-main"><i class="fas fa-arrow-right"></i> Invite </button></a>
         </div>
       </div>
     </div>
@@ -36,7 +36,7 @@
      <% } %>
 
 <br><br><br><br><br>
-    <h2 class="heading">Other Bots</h2><br><br>
+    <h2 class="heading"><i class="fas fa-list"></i> Other Bots</h2><br><br>
      <% if(verified_bots.length === 0){ %>
         <h3 class="text-center">No Bots found. Please visit us later.</h3>
       <% } else{ %>
@@ -51,8 +51,8 @@
           <h2><%= bot.botname %><% if(bot.certification === 'certified'){ %>
           <img src="https://cdn.glitch.com/1be813f1-4233-4b7a-bf44-8a562481d51f%2FCertified.png?v=1625404757585" title="Certified Bot" height="38" width="38">
         <% } %></h2><br><br>
-          <a href="/bot/<%= bot.botid %>" class="viewbot"><button class="button-main">View</button></a>
-          <a href="<%= bot.invite %>" class="invitebot"><button class="button-main">Invite</button></a>
+          <a href="/bot/<%= bot.botid %>" class="viewbot"><button class="button-main"><i class="fas fa-eye"></i> View </button></a>
+          <a href="<%= bot.invite %>" class="invitebot"><button class="button-main"><i class="fas fa-arrow-right"></i> Invite </button></a>
         </div>
       </div>
     </div>
@@ -60,7 +60,7 @@
               </div>
      <% } %>
 <br><br><br><br><br>
-    <h2 class="heading">Random Bots</h2><br><br>
+    <h2 class="heading"><i class="fas fa-random"></i> Random Bots</h2><br><br>
      <% if(random_bot.length === 0){ %>
         <h3 class="text-center">No Bots found. Please visit us later.</h3>
       <% } else{ %>
@@ -75,8 +75,8 @@
           <h2><%= random.botname %><% if(random.certification === 'certified'){ %>
           <img src="https://cdn.glitch.com/1be813f1-4233-4b7a-bf44-8a562481d51f%2FCertified.png?v=1625404757585" title="Certified Bot" height="38" width="38">
         <% } %></h2><br><br>
-          <a href="/bot/<%= random.botid %>" class="viewbot"><button class="button-main">View</button></a>
-          <a href="<%= random.invite %>" class="invitebot"><button class="button-main">Invite</button></a>
+          <a href="/bot/<%= random.botid %>" class="viewbot"><button class="button-main"><i class="fas fa-eye"></i> View </button></a>
+          <a href="<%= random.invite %>" class="invitebot"><button class="button-main"><i class="fas fa-arrow-right"></i> Invite </button></a>
         </div>
        </div>
       </div>
