--- a/views/search.ejs
+++ b/views/search.ejs
@@ -36,8 +36,8 @@
         </div>
         <div class="contentBx"><br>
           <h2 style="font-size: 25xpx;"><%= bot.botname %></h2><br><br>
-          <a href="/bot/<%= bot.botid %>" class="viewbot"><button class="button-main">View</button></a>
-          <a href="<%= bot.invite %>" class="invitebot"><button class="button-main">Invite</button></a>
+          <a href="/bot/<%= bot.botid %>" class="viewbot"><button class="button-main"><i class="fas fa-eye"></i> View </button></a>
+          <a href="<%= bot.invite %>" class="invitebot"><button class="button-main"><i class="fas fa-arrow-right"></i> Invite </button></a>
         </div>
       </div>
     </div>
